tests-e2e/tests/snapshots/cli__root_config_file.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:6
  •
  │
  • unexpected argument '--config-file' found
  │
  │   tip: a similar argument exists: '--log-file'
  │
  │ Usage: iris [--log-file] <SUBCOMMAND>
  │
  │ For more information, try '--help'.
  │
  │   iris --config-file missing.json lsp
  │        ╰────────────
  •
