tests-e2e/tests/snapshots/cli__root_requires_subcommand.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [missing_subcommand] · command line:1:1
  •
  │
  • iris 0.1.0
  │ Language implementation for the PureScript programming language.
  │
  │ Usage: iris [--log-file] <SUBCOMMAND>
  │
  │ Commands:
  │   help     Print this message or the help of the given subcommand(s)
  │
  │ Project commands:
  │   add      Add dependencies to a Spago package.
  │   build    Build a Spago workspace or package.
  │   lsp      Run the language server.
  │   new      Create a Spago project in the current directory.
  │   run      Build and run a Spago package with Node.js.
  │   test     Build and test one or more Spago packages with Node.js.
  │   watch    Build a Spago workspace or package and rebuild when inputs change.
  │
  │ Legacy commands:
  │   compile  Compile PureScript modules to JavaScript (experimental).
  │
  │ Documentation commands:
  │   docs     Documentation utilities.
  │
  │ Flags:
  │       --log-file  Print log path.
  │   -h, --help      Print help
  │   -V, --version   Print version
  │
  │   iris
  │   ╰───
  •
