tests-e2e/tests/snapshots/cli__root_stdio.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:6
  •
  │
  • unexpected argument '--stdio' found
  │
  │ Usage: iris [--log-file] <SUBCOMMAND>
  │
  │ For more information, try '--help'.
  │
  │   iris --stdio
  │        ╰──────
  •
