tests-e2e/tests/snapshots/cli__run_requires_separator.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [arg_requires_double_dash] · command line:1:1
  •
  │
  • '[-- ARGUMENTS]…' can only be given after '--'
  │
  │ Usage: iris run [FLAGS] [-- ARGUMENTS]…
  │
  │ For more information, try '--help'.
  │
  │   iris run argument
  │   ╰────────────────
  •
