tests-e2e/tests/snapshots/cli__unknown_build_flag.snap
---
source: tests-e2e/tests/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:12
  •
  │
  • unexpected argument '--unknown' found
  │
  │ Usage: iris build [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris build --unknown
  │              ╰────────
  •
